Deskripsi perubahan yang dilakukan

--- a/Home.html
+++ b/Home.html
@@ -54,13 +54,19 @@
               <h2>Bp. Kasehito dan Ibu Nafisa</h2>
               <div class="icon">
                 <div data-aos="fade-down" data-aos-duration="1000">
-                  <box-icon type="logo" name="instagram"></box-icon>
+                  <a href="https://www.instagram.com/mra._.kaka">
+                    <box-icon type="logo" name="instagram"></box-icon>
+                  </a>
                 </div>
                 <div data-aos="fade-down" data-aos-duration="2000">
-                  <box-icon name="whatsapp" type="logo"></box-icon>
+                  <a href="http://wa.me/62895425006908">
+                    <box-icon name="whatsapp" type="logo"></box-icon>
+                  </a>
                 </div>
                 <div data-aos="fade-down" data-aos-duration="3000">
-                  <box-icon name="tiktok" type="logo"></box-icon>
+                  <a href="https://www.linkedin.com/in/muhammad-rafif-azka-budiawan-476925298?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+                    <box-icon name="linkedin-square" type="logo"></box-icon>
+                  </a>
                 </div>
               </div>
             </div>
@@ -75,13 +81,19 @@
               <h2>Bp. Budjam Al-Fajri dan Ibu Alikha</h2>
               <div class="icon">
                 <div data-aos="fade-down" data-aos-duration="1000">
-                  <box-icon type="logo" name="instagram"></box-icon>
+                  <a href="https://www.instagram.com/vz.kiaa">
+                    <box-icon type="logo" name="instagram"></box-icon>
+                  </a>
                 </div>
                 <div data-aos="fade-down" data-aos-duration="2000">
-                  <box-icon name="whatsapp" type="logo"></box-icon>
+                  <a href="http://wa.me/6281226760835">
+                    <box-icon name="whatsapp" type="logo"></box-icon>
+                  </a>
                 </div>
                 <div data-aos="fade-down" data-aos-duration="3000">
-                  <box-icon name="tiktok" type="logo"></box-icon>
+                  <a href="https://www.linkedin.com/in/zaskia-amelia-259811311?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+                    <box-icon name="linkedin-square" type="logo"></box-icon>
+                  </a>
                 </div>
               </div>
             </div>
@@ -101,7 +113,7 @@
     <div class="page3">
       <div class="dalam">
         <div data-aos="fade-down" data-aos-duration="1000" data-aos-offset="200">
-          <h2>We’re Getting Married</h2>
+          <h2>Kami Akan Segera Menikah</h2>
         </div>
         <div class="gabungan">
           <div class="salam">
@@ -152,7 +164,7 @@
               <h4>07.00 - 08.30</h4>
               <br />
               <br />
-              <h1>SMK RUS</h1>
+              <h1>AULA SMK RUS</h1>
               <h5>
                 Jl. Sukun Raya No. 09, Besito Kulon, Besito,<br />
                 Kec. Gebog, Kabupaten Kudus,<br />
@@ -167,7 +179,7 @@
               <h4>09.00 - 11.30</h4>
               <br />
               <br />
-              <h1>SMK RUS</h1>
+              <h1>AULA SMK RUS</h1>
               <h5>
                 Jl. Sukun Raya No. 09, Besito Kulon, Besito,<br />
                 Kec. Gebog, Kabupaten Kudus,<br />
@@ -305,7 +317,6 @@
         </form>
       </div>
     </div>
-    
 
     <!-- Page6 -->
 
